clang++-7.0.1.log
main.cpp:14:5: error: redefinition of 'add'
int add(int a, int b) {
    ^
main.cpp:4:5: note: previous definition is here
int add(int a, int b) {
    ^
main.cpp:20:3: error: no matching function for call to 'add'
  add();
  ^~~
main.cpp:14:5: note: candidate function not viable: requires 2 arguments, but 0 were provided
int add(int a, int b) {
    ^
main.cpp:9:7: note: candidate function not viable: requires 2 arguments, but 0 were provided
float add(float a, float b) {
      ^
2 errors generated.
